@@ -32,6 +32,8 @@ public:
   ~Piece ();
 
   void Select (bool bSelecting, bool bFocus, bool bMultiple);
+  virtual void InsertTime (unsigned short start, bool animation, unsigned short time);
+  virtual void RemoveTime (unsigned short start, bool animation, unsigned short time);
 
 
 
